--- a/ApplicationDisplay.vcxproj
+++ b/ApplicationDisplay.vcxproj
@@ -158,6 +158,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="gollum.png" />
+    <Image Include="planks.png" />
+    <Image Include="planksSpec.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
