--- a/ApplicationDisplay.vcxproj
+++ b/ApplicationDisplay.vcxproj
@@ -70,12 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\Nathan\Desktop\C++OpenGL\ApplicationDisplay\Libraries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Nathan\Desktop\C++OpenGL\ApplicationDisplay\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Admin\Documents\GitHub\GraphicsDisplay\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Admin\Documents\GitHub\GraphicsDisplay\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Nathan\Desktop\C++OpenGL\ApplicationDisplay\Libraries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Nathan\Desktop\C++OpenGL\ApplicationDisplay\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Admin\Documents\GitHub\GraphicsDisplay\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Admin\Documents\GitHub\GraphicsDisplay\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -136,6 +136,7 @@
     <ClCompile Include="ElementBufferObject.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ShaderClass.cpp" />
     <ClCompile Include="stb.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ElementBufferObject.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="ShaderClass.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="VertexArrayObject.h" />
