--- a/ApplicationDisplay.vcxproj
+++ b/ApplicationDisplay.vcxproj
@@ -133,7 +133,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DevMath.cpp" />
     <ClCompile Include="ElementBufferObject.cpp" />
+    <ClCompile Include="DevEngine.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -142,6 +144,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VertexArrayObject.cpp" />
     <ClCompile Include="VertexBufferObject.cpp" />
+    <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag" />
@@ -151,12 +154,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DevMath.h" />
     <ClInclude Include="ElementBufferObject.h" />
+    <ClInclude Include="DevEngine.h" />
+    <ClInclude Include="IEngineStartup.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ShaderClass.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="VertexArrayObject.h" />
     <ClInclude Include="VertexBufferObject.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="gollum.png" />
