--- a/ApplicationDisplay.vcxproj.filters
+++ b/ApplicationDisplay.vcxproj.filters
@@ -163,6 +163,9 @@
     <ClInclude Include="Math\DQuaternion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Math\IDevMathComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="gollum.png">
@@ -173,6 +176,9 @@
     </Image>
     <Image Include="planks.png">
       <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="..\..\..\Downloads\Sword_Texture.jpeg">
+      <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
